manifests/cilium/base/cilium-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-ingress-only-host
spec:
  description: "Deny all ingress traffic except from host"
  endpointSelector: {}
  enableDefaultDeny:
    ingress: true
  ingress:
    - fromEntities:
        - host
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cilium-health
spec:
  description: "Allow cilium health check"
  endpointSelector:
    matchExpressions:
      # Health endpoint (FYI: https://docs.cilium.io/en/stable/gettingstarted/terminology/#special-identities)
      - key: reserved:health
        operator: Exists
  ingress:
    - fromEntities:
        - host
        - remote-node
        - health
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay
  labels:
    app.kubernetes.io/name: hubble-relay
    app.kubernetes.io/part-of: cilium
    k8s-app: hubble-relay
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: hubble-ui
      toPorts:
        - ports:
            - port: "grpc"
              protocol: TCP
          rules:
            http: [{}]
